--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<junit.version>4.11</junit.version>
 	<log4j.version>1.2.17</log4j.version>
 	<servlet.version>3.1.0</servlet.version>
+	<!-- PostgresSQL -->
+	<postgresql.version>9.4.1212.jre7</postgresql.version>
   </properties>
   
   <dependencies>
@@ -31,6 +33,7 @@
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>${log4j.version}</version>
+		<scope>compile</scope>
 	</dependency>
 	
 	<!-- Servlet -->
@@ -46,12 +49,22 @@
 		<groupId>jstl</groupId>
 		<artifactId>jstl</artifactId>
 		<version>${jstl.version}</version>
+		<scope>compile</scope>
 	</dependency>
 	<dependency>
 		<groupId>taglibs</groupId>
 		<artifactId>standard</artifactId>
 		<version>1.1.2</version>
+		<scope>compile</scope>
 	</dependency>
+	
+	<!-- Databases -->
+    <dependency>
+    	<groupId>org.postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>${postgresql.version}</version>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
   
   
